Ensure import statement doesn't wrap

--- a/eleventy/assets/css/style.css
+++ b/eleventy/assets/css/style.css
@@ -560,6 +560,10 @@ header .header-version {
     margin-left: 12px;
 }
 
+.component-info-item-code .no-code-scroll > span {
+    white-space: pre;
+}
+
 .component-info-item-link {
     display: flex;
     color: #000000cc;
